--- a/style.css
+++ b/style.css
@@ -34,15 +34,6 @@ header {
 	width: 100%;
 }
 
-nav {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-}
-
-nav ul {
-	display: flex;
-}
 
 nav li {
 	margin: 0 10px 0 20px;
@@ -57,11 +48,35 @@ a:hover {
 
 /* --- menu nav header --- */
 
+.container_navbar
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+nav
+{
+    position: absolute;
+    right: 7%;
+    
+}
+.nav_bar
+{
+  display: flex;
+}
+.nav_bar>li
+{
+    width: 50%;
+}
+
 .change_color {
 	color: #0065fc;
 }
 .inscrire_text {
 	font-weight: bold;
+    margin-bottom: 3px;
+    display: flex;
+    align-items: center;
 }
 
 .change_hypertext {
@@ -73,9 +88,6 @@ a:hover {
 	color: black;
 }
 
-.logo-header {
-	display: flex;
-}
 
 /* -- filtre barre de recherche --*/
 .barre_recherche {
@@ -474,22 +486,26 @@ a.lien_Hebergements_pop {
 
 	/*header*/
 
-	nav > ul {
-		justify-content: space-around;
-		width: 100%;
-		display: flex;
-	}
+	
+    nav 
+    {
+        width: 100%;
+        padding-top: 50px;
+        padding-left: 50px;
+        border-bottom: 3px solid #d9d9d9;
+        padding-bottom: 10px;
+    }
+    .change_hypertext1
+    {
+        margin-left: 60px;
+    }
+    .responsive_link
+    {
+        padding-bottom: 10px;
+        
+    }
 
-	nav > ul > li:nth-child(1) {
-		position: absolute;
-		padding-top: 60px;
-		margin-right: 260px;
-	}
-	nav > ul > li:nth-child(2) {
-		position: absolute;
-		padding-top: 60px;
-		margin-left: 70px;
-	}
+     
 	:hover.responsive_link {
 		border-bottom: 1px solid #0065fc;
 		border-top: none;
@@ -503,16 +519,8 @@ a.lien_Hebergements_pop {
 		font-size: 17px;
 		font-weight: inherit;
 	}
-	.inscrire_order {
-		order: 1;
-		padding-left: 160px;
-	}
-	.hebergement_order {
-		order: 3;
-	}
-	.activités_order {
-		order: 2;
-	}
+
+	
 	/*display filter*/
 	.button_filter {
 		margin-right: 40px;
@@ -527,6 +535,9 @@ a.lien_Hebergements_pop {
 	}
 	.text_section {
 		margin-top: 30px;
+        text-align:justify;
+        width: 270px;
+
 	}
 	.position_button {
 		flex-direction: row;
@@ -641,7 +652,7 @@ a.lien_Hebergements_pop {
 		justify-content: center;
 		margin: 20px;
 	}
-
+    
 	/*Hébergement à marseille*/
 	.position_hebergement {
 		display: flex;
