--- a/style.css
+++ b/style.css
@@ -603,6 +603,7 @@ a.lien_Hebergements_pop {
 	.position_filter {
 		margin-bottom: 10px;
 		margin-left: 10px;
+		font-weight:bold;
 	}
 
 	.display_filtre {
